syntax = "proto3";
package assets.transactions.mutate;

import "ids/base/asset_id.proto";
import "ids/base/identity_id.proto";
import "lists/base/property_list.proto";

message Message {
  string from = 1;
  ids.base.IdentityID from_i_d = 2;
  ids.base.AssetID asset_i_d = 3;
  lists.base.PropertyList mutable_meta_properties = 4;
  lists.base.PropertyList mutable_properties = 5;
}